<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="12dp"
        android:layout_margin="@dimen/spacing_mlarge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mxlarge">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/Signup"
                android:textColor="@color/grey_90"
                android:textSize="20sp"
                android:layout_marginBottom="-5dp"/>

            <View
                android:layout_width="@dimen/spacing_mlarge"
                android:layout_height="2dp"
                android:background="@color/pink"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/spacing_medium"
                android:padding="@dimen/spacing_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/create_button_color"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/signup_using_phone_number"/>

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:background="@drawable/btn_rounded_pink_outline"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:inputType="text"
                    android:textSize="16dp"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:textColorHint="@color/hint_color"
                    android:textColor="@color/create_button_color"
                    android:fontFamily="@font/poppins_regular"
                    />

            <EditText
                android:id="@+id/contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number"
                android:background="@drawable/btn_rounded_pink_outline"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:inputType="phone"
                android:textSize="16dp"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:layout_marginTop="@dimen/spacing_middle"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/create_button_color"
                android:fontFamily="@font/poppins_regular"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:background="@drawable/btn_rounded_pink_outline"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:inputType="textPassword"
                android:textSize="16dp"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:layout_marginTop="@dimen/spacing_middle"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/create_button_color"
                android:fontFamily="@font/poppins_regular"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:background="@drawable/btn_rounded_pink_outline"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:textColorHint="@color/hint_color"
                    android:textColor="@color/create_button_color"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:fontFamily="@font/poppins_regular"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacing_middle">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/create_button_color"
                    android:text="@string/remember_me"
                    android:layout_weight="1"
                    android:textSize="12dp"
                    android:gravity="center|start"
                    android:fontFamily="@font/poppins_regular"/>

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_gravity="end|center"
                    android:gravity="center|end"
                    android:text="@string/forgot_password"
                    android:textSize="12dp"
                    android:textColor="@color/create_button_color"
                    android:fontFamily="@font/poppins_regular"/>

            </LinearLayout>

            <Button
                android:id="@+id/save_my_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_pink"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/spacing_mxlarge"
                android:layout_marginBottom="@dimen/spacing_mxlarge"
                />

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>