<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="@dimen/spacing_middle"
        android:layout_margin="@dimen/spacing_mlarge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mxlarge">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_90"
                android:textSize="24sp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/forgot_password"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_90"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/spacing_middle"
                android:text="@string/please_enter_mobile_number"/>

            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:background="@drawable/btn_rounded_pink_outline"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:inputType="phone"
                android:textSize="18sp"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:textColorHint="@color/grey_20"
                android:textColor="@color/grey_90"
                android:fontFamily="@font/poppins_regular"
                />

            <Button
                android:id="@+id/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_pink"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/reset_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="50dp"
                />

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>