<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpVerificationActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_gravity="center|start"
                android:layout_marginLeft="@dimen/spacing_large"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/otp_verfication"
                android:gravity="start|center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/otp_back"
                />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_mlarge">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:text="@string/enter_otp"
                        android:textSize="24sp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/otp_sent"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/onboarding_text_color"
                        android:layout_marginTop="@dimen/spacing_medium"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                    <com.gne.www.lib.PinView
                        android:id="@+id/pinview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textColor="@color/grey_90"
                        app:pinCount="4"
                        app:inputType="number"
                        app:pinBackground="@drawable/btn_rounded_grey_outline"
                        app:pinSize="60dp"
                        app:passwordToggleSize="26dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00.55"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:textColor="@color/second_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center"
                    android:text="Resend OTP"
                    android:textColor="@color/second_color"
                    android:textSize="14sp" />

                <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                    <Button
                        android:id="@+id/verify_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_rounded_pink"
                        android:text="@string/verify"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>

                </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>