<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="12dp"
        android:layout_margin="@dimen/spacing_mlarge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mxlarge">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/welcome"
                android:layout_marginBottom="-15dp"/>

            <View
                android:layout_width="@dimen/spacing_mlarge"
                android:layout_height="2dp"
                android:background="@color/pink"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_medium"
                android:padding="@dimen/spacing_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/welcome_text_color"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/spacing_middle"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et"/>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_pink"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/spacing_mlarge"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="@dimen/spacing_mlarge"
                android:alpha="0.7"
                android:gravity="center">

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="@color/grey_40"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Or"
                    android:textSize="16dp"
                    android:padding="@dimen/spacing_middle"
                    android:textColor="@color/grey_40"/>

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="@color/grey_40"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/btn_rounded_pink_outline1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/create_button_color"
                    android:textSize="18sp"
                    android:text="@string/create_an_account"/>


            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>